fix for collapsing tabs when there is not enough content

--- a/source/stylesheets/refills/_accordion-tabs.scss
+++ b/source/stylesheets/refills/_accordion-tabs.scss
@@ -75,6 +75,7 @@
   .tab-content {
     background: $tab-content-background;
     display: none;
+    width: 100%;
     padding: $base-spacing $gutter;
 
     @include media($tab-mode) {
